--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mogoose": "0.0.1-security",
     "mongoose": "^5.10.11",
     "mongoose-encryption": "^2.0.2",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
